# log-infotecs

./: .gitignore  CMakeLists.txt  README.md
examples/log_stats/: LogServer.cpp  LogServer.h  LogStatsCollector.cpp  LogStatsCollector.h  log_stats.cpp
examples/log_writer/: ThreadSafeQueue.h  log_writer.cpp
include/: FileLogger.h  ILogger.h  LoggerFactory.h  SocketLogger.h  ThreadSafeQueue.h
src/: FileLogger.cpp  LoggerFactory.cpp  SocketLogger.cpp  ThreadSafeQueue.cpp
tests/: main.cpp
tests/include/: TestFileLogger.h  TestFramework.h  TestILogger.h  TestLogStatsCollector.h  TestLoggerFactory.h  TestThreadSafeQueue.h
tests/src/: TestFileLogger.cpp  TestFramework.cpp  TestILogger.cpp  TestLogStatsCollector.cpp  TestLoggerFactory.cpp  TestThreadSafeQueue.cpp
